libs/@local/hashql/hir/tests/ui/lower/checking/input-default-invalid.jsonc
//@ run: fail
//@ description: Test that input inference for the default works
["input", "x", "Number", { "#literal": "42" }]
//~^ ERROR Type mismatch in this expression
